# vector_db

./: Cargo.toml  README.md
src/: main.rs  vector_db.rs
