[package]
name = "vector_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vector_node = { git = "https://github.com/JustBobinAround/vector_node.git"}
openai_api = { git = "https://github.com/JustBobinAround/openai_api.git"}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
